[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyNILC"
version = "0.1.0"
description = "A Python package for NILC methods in cosmology"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anto Idicherian Lonappan", email = "antolonappan@icloud.com"}
]

keywords = ["NILC", "cosmology", "CMB", "Python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "healpy",
    "ducc0"
]

requires-python = ">=3.9"  # Correct placement of Python version requirement

[project.scripts]
pynilc = "pynilc.cli:main"  # Correct way to define a CLI script

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "black"
]

[tool.setuptools.packages.find]
where = ["."]